[gd_scene load_steps=6 format=2]

[ext_resource path="res://alex_spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Alex.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/jump1.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/switch23.ogg" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 27.2636
height = 14.974

[node name="Alex" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.27739, 15.5688 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SoundJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="DamageSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
